# ru_sci_bench

./: README.md  classification.py  pyproject.toml  requirements.txt  utils.py
data/elibrary_grnti_en/: test.csv
data/elibrary_grnti_full/: test.csv
data/elibrary_grnti_ru/: train.csv
data/elibrary_oecd_en/: test.csv  train.csv
data/elibrary_oecd_ru/: test.csv  train.csv
ru_sci_bench/: __init__.py  classification.py  utils.py
ru_sci_bench/data/: ru_en_translation_test.json
ru_sci_bench/data/elibrary_grnti_en/: train.csv
ru_sci_bench/data/elibrary_grnti_full/: train.csv
ru_sci_bench/data/elibrary_grnti_ru/: test.csv
ru_sci_bench/data/elibrary_oecd_full/: test.csv  train.csv
