[tool.poetry]
name = "ru-sci-bench"
version = "0.1.0"
description = ""
authors = ["Nikolai Gerasimenko <nikgerasimenko@gmail.com>", "Alexey Vatolin <vatolinalex@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ru_sci_bench"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
numpy = "^1.23.5"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
